# hs-bcopl

./: .gitignore  LICENSE  README.md  hs-bcopl.cabal
src/Language/BCoPL/: CompareNat.hs  Derivation.hs  Diagram.hs  Equiv.hs  EvalNatExp.hs  Exists.hs  Exp.hs  MetaTheory.hs  Nat.hs  Not.hs  Peano.hs  ReduceNatExp.hs
src/Language/BCoPL/DataLevel/: CompareNat.hs  Derivation.hs  Diagram.hs  EvalML1.hs  EvalML1Err.hs  EvalNatExp.hs  Exp.hs  ML1.hs  Nat.hs  Peano.hs  ReduceNatExp.hs
src/Language/BCoPL/MetaTheory/: CompareNat.hs  EvalNatExp.hs  Nat.hs  ReduceNatExp.hs
src/Language/BCoPL/TypeLevel/: CompareNat.hs  Equiv.hs  EvalNatExp.hs  Exists.hs  Exp.hs  Nat.hs  Not.hs  Peano.hs  ReduceNatExp.hs
src/Language/BCoPL/TypeLevel/MetaTheory/: CompareNat.hs  EvalNatExp.hs  Nat.hs  ReduceNatExp.hs  Semantics.hs
test/: doctests.hs
