name:                hs-bcopl
version:             1.0.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/nobsun/hs-bcopl
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.BCoPL.DataLevel.Peano
                     , Language.BCoPL.DataLevel.Nat
                     , Language.BCoPL.DataLevel.Exp
                     , Language.BCoPL.DataLevel.CompareNat
                     , Language.BCoPL.DataLevel.EvalNatExp
                     , Language.BCoPL.DataLevel.ReduceNatExp
                     , Language.BCoPL.DataLevel.Diagram
                     , Language.BCoPL.DataLevel.Derivation
                     , Language.BCoPL.DataLevel.ML1
                     , Language.BCoPL.DataLevel.EvalML1
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , boxes
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
