name:                hs-bcopl
version:             2.2.1.3.1
-- synopsis:            
-- description:         
homepage:            http://github.com/nobsun/hs-bcopl
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:       Language.BCoPL.TypeLevel.Peano
                       , Language.BCoPL.TypeLevel.Nat
                       , Language.BCoPL.TypeLevel.Exp
                       , Language.BCoPL.TypeLevel.CompareNat
                       , Language.BCoPL.TypeLevel.EvalNatExp
                       , Language.BCoPL.TypeLevel.ReduceNatExp
                       , Language.BCoPL.TypeLevel.Equiv
                       , Language.BCoPL.TypeLevel.Exists
                       , Language.BCoPL.TypeLevel.MetaTheory.Nat
                       , Language.BCoPL.TypeLevel.MetaTheory.CompareNat
                       , Language.BCoPL.TypeLevel.MetaTheory.EvalNatExp
                       , Language.BCoPL.TypeLevel.MetaTheory.ReduceNatExp
  -- other-modules:       
  -- other-extensions:    
  build-depends:         base >=4.8 && <4.9
                       , containers
  --                      , singletons
  hs-source-dirs:      src
  ghc-options:         -fno-warn-overlapping-patterns -fwarn-incomplete-patterns -fwarn-unused-binds -fwarn-unused-imports
  default-language:    Haskell2010

test-suite doctest
  type:                  exitcode-stdio-1.0
  hs-source-dirs:        test, src
  main-is:               doctests.hs
  build-depends:         base
                       , hs-bcopl
                       , doctest
  ghc-options:         -rtsopts -fno-warn-overlapping-patterns -fwarn-incomplete-patterns -fwarn-unused-binds -fwarn-unused-imports
  default-language:    Haskell2010
